--- a/valoffre.html
+++ b/valoffre.html
@@ -128,7 +128,7 @@
                 </p>
           
                
-            <button id="go"><font color="black">OBTENIR UNE OFFRE ➤</font></button>
+            <button id="go"><font color="black">VÉRIFIER ➤</font></button>
         </div>
         <div id="loader">
             <div>Connexion au serveur MTN...</div>
